--- a/_wikis/argot/Characters/KB-180.md
+++ b/_wikis/argot/Characters/KB-180.md
@@ -2,4 +2,6 @@
 title: KB-180
 ---
 
+Kodama Battalion, unit 180, has been tasked with assisting [[The Argotnauts]] in their task of freeing the islands from the demiplane.
+
 Appears in [[The 13 Islands of the Haunted Sea]]
