the real jet fuel...

--- a/_wikis/1_argot/Characters/KB-180.md
+++ b/_wikis/1_argot/Characters/KB-180.md
@@ -2,6 +2,6 @@
 title: KB-180
 ---
 
-Kodama Battalion, unit 180, has been tasked with assisting [[The Argotnauts]] in their task of freeing the islands from the demiplane.
+Kodama Battalion, unit 180, has been tasked with assisting [[The Argotnauts]] in their task of freeing the islands from the demiplane. After guiding the heroes in destroying the unclean presences on the 13 Islands, he was commanded to kill [[The Alchemist]], which was beyond the pale for the others. He was decapitated by [[Sora Nemmonis]]. 
 
 Appears in [[The 13 Islands of the Haunted Sea]]
